--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_add"
+        android:icon="@drawable/ic_add_circle_outline_black_24dp"
+        android:title="+"
+        app:showAsAction="ifRoom" />
+
 </menu>
